# mochiflow

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.ja.md  README.md  SECURITY.md  dist-workspace.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: validate-release-provenance.sh
.github/workflows/: ci.yml  macos.yml  release-plan.yml  release.yml
.kiro/agents/: spec-builder.json  spec-change-reviewer.json  spec-independent-reviewer.json  spec-plan-auditor.json  spec-worker.json
.kiro/hooks/: generate-project-index.kiro.hook
.kiro/steering/: mochiflow.md  release.md  spec-build.md  spec-discuss.md  spec-patch.md  spec-plan.md  spec-refresh-context.md  spec-review.md  spec-ship.md  spec.md
.mochiflow/: .gitignore  INDEX.md  config.toml  constitution.md
.mochiflow/adr/: decisions.md  pitfalls.md
.mochiflow/adr/decisions/: 2026-06-22-version-ssot.md  2026-06-23-ac-matrix-token-normalization.md  2026-06-23-commit-lifecycle-unification.md  2026-06-23-plan-to-build-transition-ux.md  2026-06-23-ship-qa-experience.md  2026-06-24-doctor-and-freeze-stay-separate-diagnostics.md  2026-06-24-kiro-adapter-always-on-steering.md  2026-06-24-prevent-build-phase-spec-mutation.md  2026-06-24-verify-ci-parity.md  2026-06-25-lint-residue-and-multiline-ears.md  2026-06-25-manifest-test-isolation.md  2026-06-25-qa-attack-matrix.md  2026-06-26-choice-card-command-ux.md  2026-06-26-lint-deleted-files-in-tasks.md  2026-06-27-post-build-pr-close-flow.md  2026-06-28-adr-store-addressable-redesign.md  2026-06-28-build-orchestrator-disposable-workers.md  2026-06-28-kiro-adapter-adds-worker-agent.md  2026-06-28-worker-unit-kind-discriminator.md  (+18 more)
.mochiflow/context/: product.md  structure.md  tech.md
cli/: Cargo.toml  deny.toml
cli/crates/mochiflow-cli/: Cargo.toml
cli/crates/mochiflow-cli/src/: main.rs
cli/crates/mochiflow-cli/tests/: cli.rs  conformance.rs  first_run.rs  pr.rs
cli/crates/mochiflow-cli/tests/golden/: guide_en.txt  guide_ja.txt  init_npm.json
cli/crates/mochiflow-core/: Cargo.toml
cli/crates/mochiflow-core/src/: accept.rs  adapter.rs  adr.rs  backlog.rs  config.rs  delivery.rs  detach.rs  detect.rs  doctor.rs  freeze.rs  index.rs  init.rs  inspect.rs  join.rs  lib.rs  lint.rs  manifest.rs  pr.rs  present.rs  ship.rs  spec_meta.rs  spec_mode.rs  status.rs  upgrade.rs
contracts/: LEGACY.md  VERSIONING.md  agent-context.schema.json  config.schema.json  manifest.schema.json  pr-request.schema.json  spec.schema.json
docs/: concepts.md  configuration.md  getting-started.md  release-verification.md  versioning.md
engine/: MANIFEST.json  README.md  router.md
engine/agents/: change-reviewer.md  independent-reviewer.md  plan-auditor.md  reviewer-core.md  worker.md
engine/commands/: build.md  close.md  discuss.md  onboard.md  open.md  patch.md  plan.md  refresh-context.md  review.md  ship.md  update.md
engine/reference/: agent-context.md  authoring.md  delivery.md  engineering-standards.md  git.md  knowledge.md  language.md  lifecycle.md  presentation.md  review.md  risk.md  specs.md  verification.md  workflow.md
(+321 files in other folders)
