[package]
name = "mochiflow-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[[bin]]
name = "mochiflow"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
include_dir = { workspace = true }
mochiflow-core = { path = "../mochiflow-core" }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
jsonschema = { workspace = true }
toml = { workspace = true }
yaml-rust2 = "0.11"
